# DockerPreprocessor

./: .gitignore  CMakeLists.txt  README.md
docs/: cmake_guide.md
include/: main.h
lib/config/: CMakeLists.txt
lib/config/include/: config.h  config_parser.h
lib/config/src/: config_parser.c
lib/logger/: CMakeLists.txt
lib/logger/include/: logger.h
lib/logger/src/: logger.c
src/: main.c
